[package]
name = "ruspi-hyper"
version = "0.1.0"
authors = ["Rolf <rolf@scherer.ml>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
rustls = "0.17"
tokio-rustls = "0.13"
hyper-rustls = { version = "0.20", feature = "tokio-runtime", default-features = false }

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "tls_server"
path = "src/tls_server/main.rs"
