[package]
name = "ruspi-tokio"
version = "0.1.0"
authors = ["Rolf <rolf@scherer.ml>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
log = "0.4"


[[bin]]
name = "tokio-server"
path = "src/server/main.rs"

