[package]
name = "ruspi-warp"
version = "0.1.0"
authors = ["Rolf <rolf@scherer.ml>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = { version= "0.2", features = ["tls"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
