[package]
name = "ruspi-warp"
version = "0.1.0"
authors = ["Rolf <rolf@scherer.ml>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = { version= "0.2", features = ["tls"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
bytes = "0.5"


[[bin]]
name = "hello"
path = "src/hello/main.rs"

[[bin]]
name = "multiport"
path = "src/multiport/main.rs"

[[bin]]
name = "routing"
path = "src/routing/main.rs"

[[bin]]
name = "web_socket_upgrade"
path = "src/web_socket_upgrade/main.rs"

[[bin]]
name = "web_socket_chat_app"
path = "src/web_socket_chat_app/main.rs"

[[bin]]
name = "sse"
path = "src/sse/main.rs"

[[bin]]
name = "sse_chat"
path = "src/sse_chat/main.rs"


[[bin]]
name = "tls"
path = "src/tls/main.rs"